# IU5

./: .gitignore
Сем1/ОП/dz/: CMakeLists.txt  main.cpp
Сем1/ОП/lab02/: diagram.json  main.cpp
Сем1/ОП/lab03_var12/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
Сем2/ПКШ/lab02/: CMakeLists.txt  goods.txt  lab02_otchet_Chernev.docx  main.cpp  Задание ЛР 15 ООП азимут.pages
Сем2/ПКШ/lab02/goods/: CMakeLists.txt  goods.cpp  goods.h
Сем2/ПКШ/lab02/planet_lib/: CMakeLists.txt  planet.cpp  planet.h
Сем3/Модели данных/: football_clubs_lab2.accdb  football_clubs_lab3_done.accdb  football_clubs_lab4_done.accdb  ИУ5-34Б_Чернев_ОтчетЛР1.docx  ИУ5_34Б_Чернев_Отчет_ЛР2.docx  ИУ5_34Б_Чернев_ОтчетЛР3.1.docx
Сем3/Пикяп/: link.txt
Сем4/XML/: link.txt
Сем4/Базы данных/: lab1_dop.sql  lab2.sql  lab3.sql  lab5.sql  lab5dop.sql  lab7.sql  lab8_indexes.sql  lab9.sql  lab9_2.sql
Сем4/Политология/: Доп_задание_Личность_в_политике_Чернев_ИУ5_44Б.docx  Дополнительное задание к семинару 12 “Политическая культура” Чернев ИУ5-44Б.docx  Китайский_социальный_эксперимент_Чернев_ИУ5-44Б.docx  Особенности_этнополитических_конфликтов.docx  Чернев_ИУ5-44Б_Дополнительное_задание_Оккультизм_в_современной_России.docx  Чернев_ИУ5-44Б_Дополнительное_задание_Театр_для_Таджикистана.docx  доп_задание_личность_в_политике_Чернев_ИУ5_44Б-2.docx
Сем4/СП/: 8.asm  8d.asm  8lab.asm  LAB3.ASM  LAB5_25.ASM  MY_help.bat  THIRD.ASM  dop6.asm  l6.asm  lab.asm  lab2.bat  lab3dop.asm  lab4.asm  lab5.asm  lab5dop.asm  lab6.asm  lab7.asm  lab7dop.asm  lab8.asm  lab8dop.asm  ld6.asm  t.asm  tsr.asm
(+243 files in other folders)
